--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,35 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+*{margin: 0; padding: 0; }
+body{font-size: 100%;}
+li{list-style: none;}
+a{text-decoration: none;color: #333;}
+header{display: flex;align-items: center;padding: 10px 40px;border-bottom: 1px solid #333;}
+header h1{margin-right: 30px;}
+header nav{margin-right: auto}
+header nav ul{display: flex;gap:0 8px;}
+header .useUtil ul{display: flex;gap: 0 8px;}
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+main{}
+footer{
+    background-color: aqua;
+    display: flex;
+    padding: 0 40px;
+    gap: 10px;
+    justify-content: space-between;
+}
+/* footer h2{
+    margin-right: auto;
+} */
+/* footer address{
+    margin-left: auto;
+} */
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.container{
+    max-width: 1280px;
+    border: 1px solid #ccc;
+    margin: 0 auto;
+    padding: 100px 40px;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.container h3,
+.container p{
+    text-align: center;
 }
