상품후기 폼 완성 - 진우

--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,20 @@ footer{
 .container p{
     text-align: center;
 }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+  
+th, td {
+border: 1px solid black;
+padding: 10px;
+text-align: center;
+}
+
+.pagination {
+text-align: center;
+margin: 20px 0;
+}
