--- a/src/css/Review/ReviewForm.css
+++ b/src/css/Review/ReviewForm.css
@@ -2,6 +2,13 @@
     width: 600px;
     margin: 40px auto;
     font-family: sans-serif;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    background: #fff;
+    padding: 20px;
+    border: 1px solid #000;
+    transform: translate(-50%, -50%);
   }
   
   .form-title {
