--- a/src/css/util/dynamicTable.css
+++ b/src/css/util/dynamicTable.css
@@ -50,3 +50,16 @@
   opacity: 0.5;
   cursor: not-allowed;
 }
+.write-button {
+  padding: 6px 12px;
+  background-color: #000;
+  color: black;
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.write-button:hover {
+  background-color: #333;
+  color: white;
+}
