--- a/src/css/util/dynamicTable.css
+++ b/src/css/util/dynamicTable.css
@@ -1,6 +1,6 @@
 .table-container {
   width: 100%;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin-top: 20px;
   font-size: 14px;
 }
