--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
 *{margin: 0; padding: 0; }
+html, body, #root {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
 body{font-size: 100%;}
 li{list-style: none;}
 a{text-decoration: none;color: #333;}
