--- a/src/css/myPage/SupportComponent.css
+++ b/src/css/myPage/SupportComponent.css
@@ -1,6 +1,9 @@
 /* SupportComponent.css */
 
-.container {
+.support-container {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 100px 40px;
     padding: 20px;
 }
 
