productDetail 하단에 상품후기,상품문의,배송교환안내 css및 구현 완료 - 진우

--- a/src/css/product/ProductDetailPage.css
+++ b/src/css/product/ProductDetailPage.css
@@ -109,3 +109,14 @@
   .tab-menu li.active a {
     font-weight: bold;
   }
+
+  .productBoard .product-details{
+    max-width: 1200px;
+    margin: 0 auto; /* 가운데 정렬 */
+    padding: 40px 20px;
+  }
+  .request-exchange{
+    max-width: 1200px;
+    margin: 0 auto; /* 가운데 정렬 */
+    padding: 40px 20px;
+  }
