--- a/src/css/product/ProductListPage.css
+++ b/src/css/product/ProductListPage.css
@@ -19,7 +19,7 @@
   
   .product-grid {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 20px;
     margin-bottom: 20px;
   }
@@ -29,12 +29,32 @@
     padding: 10px;
     text-align: center;
     cursor: pointer;
+    box-sizing: border-box;
   }
   
   .product-card img {
     width: 100%;
     height: 150px;
     object-fit: cover;
+  }
+
+  .product-card div {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .event-badge {
+    background-color: #fff;
+    color: #000;
+    border : 1px solid black;
+    width: 20%;
+    margin: 3px auto;
+    padding: 4px 8px;
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 4px;
+    z-index: 10;
   }
   
   .pagination {
