회원 정보 수정, 회원탈퇴 css - 이재민

--- a/src/css/myPage/MemberSave.css
+++ b/src/css/myPage/MemberSave.css
@@ -2,7 +2,7 @@
 .page-subtitle {
     font-weight: bold;
     font-size: 18px;
-    margin: 15px 0;
+    margin-bottom: 16px;
 }
 
 /* 관심상품 리스트 컨테이너 */
