--- a/src/css/myPage/MemberSave.css
+++ b/src/css/myPage/MemberSave.css
@@ -97,7 +97,7 @@
 }
 
 /* 삭제 버튼 스타일 */
-.delete-btn button {
+.delete-item-btn button {
     padding: 8px 16px;
     background-color: #2a7ae2;
     color: white;
