--- a/src/css/login/JoinAgreePage.css
+++ b/src/css/login/JoinAgreePage.css
@@ -4,6 +4,18 @@
     padding: 2rem;
     font-family: "Noto Sans KR", sans-serif;
   }
+
+  .joinheader {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    padding: 10px 20px;
+    border-bottom: 1px solid #000;
+  }
+
+  .joinheader .join-step{
+    text-align: right;
+  }
   
   h2 {
     font-size: 1.8rem;
