--- a/src/css/login/JoinForm.css
+++ b/src/css/login/JoinForm.css
@@ -11,7 +11,12 @@
     font-weight: bold;
   }
   
+  .join-info {
+    text-align: right;
+  }
+
   span {
+    text-align: right;
     font-size: 0.9rem;
     color: #444;
   }
@@ -25,7 +30,7 @@
   .labeled-input {
     display: flex;
     flex-direction: column;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
   }
   
   .labeled-input label::after {
@@ -89,13 +94,22 @@
     margin-right: 0.5rem;
   }
   
-  .button-group {
+  .join-btngroup{
     display: flex;
     justify-content: flex-end;
     gap: 1rem;
   }
   
-  .button-group a {
+  .join-btngroup button {
+    font-size: 16px;
+    border: 1px solid #000;
+    padding: 0.6rem 1.5rem;
+    text-decoration: none;
+    color: #000;
+    transition: background-color 0.2s;
+  }
+
+  .join-btngroup a {
     border: 1px solid #000;
     padding: 0.6rem 1.5rem;
     text-decoration: none;
@@ -103,6 +117,6 @@
     transition: background-color 0.2s;
   }
   
-  .button-group a:hover {
+  .join-btngroup a:hover {
     background-color: #f0f0f0;
   }
