0423 상품상세페이지 분쇄 체크박스 추가 - 나영일

--- a/src/css/product/ProductDetailPage.css
+++ b/src/css/product/ProductDetailPage.css
@@ -51,9 +51,9 @@
   .product-details p {
     margin: 6px 0;
   }
-  
-  .select-group {
-    margin-top: 10px;
+
+  .checkbox-group input[type="checkbox"] {
+    margin-left: 5px;
   }
   
   .quantity-input {
