--- a/src/css/product/ProductListPage.css
+++ b/src/css/product/ProductListPage.css
@@ -1,13 +1,43 @@
-.product-list-container {
+  .product-list-container {
     padding: 20px;
     max-width: 1200px;
     margin: auto;
   }
+
+  .product-list-container h2{
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    margin: 0 auto 20px;
+  }
   
   .category-buttons {
     display: flex;
-    gap: 10px;
-    margin-bottom: 20px;
+    gap: 20px;
+    margin: 0 auto 20px;
+    justify-content: center;
+  }
+
+  .category-buttons button {
+    padding: 10px 20px;
+    border: 1px solid #ccc;
+    background-color: #f9f9f9;
+    color: #333;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+
+  .category-buttons button:hover {
+    background-color: #333;
+    color: #fff;
+    border-color: #333;
+  }
+
+  .category-buttons button.active {
+    background-color: #333;
+    color: #fff;
+    border-color: #333;
   }
   
   .sort-buttons {
@@ -15,6 +45,22 @@
     justify-content: flex-end;
     gap: 10px;
     margin-bottom: 10px;
+  }
+
+  .sort-buttons button {
+    padding: 8px 16px;
+    border: none;
+    font-size: 14px;
+  }
+
+  .sort-buttons button:hover {
+    background-color: inherit; /* 배경색 유지 */
+    color: inherit; /* 텍스트 색상 유지 */
+    border: none; /* 테두리 유지 */
+  }
+
+  .sort-buttons button.active {
+    font-weight: bold;
   }
   
   .product-grid {
