--- a/src/css/cart/CartPage.css
+++ b/src/css/cart/CartPage.css
@@ -1,6 +1,8 @@
 /* 장바구니 컨테이너 */
 .cart-container {
+    width: 100%;
     padding: 20px;
+    box-sizing: border-box;
     font-size: 14px;
 }
 
@@ -8,7 +10,7 @@
 .cart-header {
     display: flex;
     justify-content: space-between; 
-    gap: 90px;
+    gap: 10px;  /* 간격을 적절히 조정 */
     align-items: center; 
     padding: 10px 0; 
     border-bottom: 1px solid #000; 
@@ -32,8 +34,9 @@
 
 /* 상품 이미지 */
 .product-image {
-    width: 50px;
-    height: auto;
+    width: 50px;  /* 고정된 크기 */
+    height: 50px;  /* 고정된 크기 */
+    object-fit: cover; /* 이미지 비율 유지 */
 }
 
 /* 상품 정보 */
@@ -61,7 +64,6 @@
 .qty-and-grind {
     display: flex;
     align-items: center;
-    /* margin-right: 30px; */
 }
 
 /* 수량 input */
@@ -95,13 +97,6 @@
 
 .buttons button:hover {
     background-color: #45a049;
-}
-
-
-.cart-container {
-    width: 100%;
-    padding: 20px;
-    box-sizing: border-box;
 }
 
 .total-section-container {
@@ -145,5 +140,3 @@
 .button-section button:hover {
     background-color: #f5f5f5;
 }
-
-    
